@@ -1,5 +1,11 @@
 2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 02955] compression_decoders error message
+	* file.c (uncompress_stream): redirect stderr 
+	* inflate.c (main): print error message
+
+2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 02949] fix for #undef USE_MIGEMO
 	* main.c (dispincsrch): need #ifdef USE_MIGEMO
 
